--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,16 @@
 
   <body>
     <%= yield %>
+
+    <nav class="navbar navbar-expand-lg align-items-center bg-primary d-flex justify-content-between">
+      <div class="logo text-white">
+           
+          <%= link_to 'U-Events', root_path, class: " text-white font-weight-bold h3" %>
+      </div>
+      <div class="nav-right d-flex flex-row align-items-center">
+          <%= link_to 'Sign In', class: "btn text-white" %>
+      </div>
+    </nav>
+
   </body>
 </html>
