--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,20 @@
 
   <body>
 
+  <div id="successMessage" class="p-0 m-0 d-flex align-items-center">
+    <% if flash[:notice] %>
+      
+        <p class="notice"><%= notice %></p>  
+    <% end %>
+    </div>
+
+    
+    <% if flash[:alert] %>
+      <div id="successMessage" class="p-2 d-flex align-items-center">
+        <p class="alert"><%= alert %></p>
+      </div>
+    <% end %>
+
     <nav class="navbar navbar-expand-lg align-items-center bg-primary d-flex justify-content-between">
       <div class="logo text-white">
            
@@ -21,7 +35,7 @@
           <%= link_to 'Sign In', class: "btn text-white" %>
       </div>
     </nav>
-    
+
     <%= yield %>
 
     
