Add Event controller
- Add index, new, create methods
- Add event_params method
- Add routes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
 <%= @user.name %>
+
+<% if @event.nil? %>
+    'events is not nil'
+<% else %>
+<% @events.each do |event| %>
+    <%= event.title %>
+<% end %>
+<% end %>
