--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,25 @@
           <%= link_to 'U-Events', root_path, class: " text-white font-weight-bold h3" %>
       </div>
       <div class="nav-right d-flex flex-row align-items-center">
-          <%= link_to 'Sign In', class: "btn text-white" %>
+        <% if current_user %>
+          <div class="btn btn-light mr-2">
+            <%= link_to 'Create Event', class: "text-decoration-none" %>
+          </div>
+
+          <div class="btn btn-light ml-2" >
+            <%= link_to 'Sign Out', sign_out_path, class: "" %>
+          </div>
+        
+        <% else %>
+          <div class="text-white">
+            <%= link_to 'Sign In', sign_in_path, class: "text-white" %>
+          </div>
+
+          <div class="btn btn-light ml-2" >
+              <%= link_to 'Sign Up', sign_up_path, class: "" %>
+          </div>
+        <% end %>
+        
       </div>
     </nav>
 
