--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,2 +1,7 @@
-<h1>Events#new</h1>
-<p>Find me in app/views/events/new.html.erb</p>
+<div class="box main my-5 mx-auto align-items-center d-flex flex-column border p-4 container w-50">
+    <h1 class="text-primary font-weight-bold">Create Event</h1>
+    <hr>
+    <div class="login-field">
+        <%= render 'form' %>
+    </div>
+</div>
