--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       <div class="nav-right d-flex flex-row align-items-center">
         <% if current_user %>
           <div class="btn btn-light mr-2">
-            <%= link_to 'Create Event', class: "text-decoration-none" %>
+            <%= link_to 'Create Event', new_event_path, class: "text-decoration-none" %>
           </div>
 
           <div class="btn btn-light ml-2" >
