Add Attendance model
- Add association with model

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -9,4 +9,8 @@
     <div>
         <%= @event.creator.name %>
     </div>
+
+    <% @event.attendees.each |e| %>
+        <%= attendee.name %>
+    <% end %> 
 </div>
