--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
           </div>
 
           <div class="text-white mr-2">
-            <%= link_to current_user.name, edit_event_path, class: "text-white font-weight-bold text-decoration-none" %>
+            <%= link_to current_user.name, root_path, class: "text-white font-weight-bold text-decoration-none" %>
           </div>
 
           <div class="ml-2" >
