Update user and event model
- add foreign_key, scope for date
- update routes
- update index, show.html page for attendance and events

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,7 +10,7 @@
         <%= @event.creator.name %>
     </div>
 
-    <% @event.attendees.each |e| %>
-        <%= attendee.name %>
-    <% end %> 
+    <%# <% @event.attendees.each |e| %>
+        <%# <%= attendee.name %> %>
+    <%# <% end %>  %> %>
 </div>
