--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,49 @@
 // Place all the styles related to the Events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.grid-post {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 3rem;
+    grid-gap: 10px;
+
+    .box {
+        box-shadow: 0 4px 8px 0 rgba(76, 68, 68, 0.2);
+        transition: 0.3s;
+      }
+    
+      .box:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+      }
+
+      .post-body {
+        font-size: 14px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical;
+        text-align: justify;
+      }
+
+      .post-title {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-line-clamp: 1;
+          -webkit-box-orient: vertical;
+          text-align: justify;
+      }
+}
+
+.img-show {
+    height: 50vh;
+}
+
+.text {
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: justify;
+  }
