--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,26 @@
 <%= @user.name %>
 <br >
 
-<p class="h2 text-primary font-weight-bold ">Upcoming Events</p>
+<div class="created-event">
+    <h1 class="text-Uppercase text-secondary ml-5 mb-n3">Created Events</h1>
+        <div class="grid-post">
+            <% @created_event.each do |e| %>
+                <div class="card box">
+                    <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_limit,q_75,w_1200/https://assets.simpleviewinc.com/simpleview/image/upload/crm/sanmateoca/shutterstock_61104537504_8ef67d97-5056-a36a-0b9f5fc892eae781.jpg" alt="img" class="card-img-top">
+                    
+                    <div class="card-body">
+                        <div class="card-title">
+                            <%= link_to e.title, event_path(e), class: 'h4 text-uppercase text-decoration-none post-title' %>
+                        </div>
+                        <div class="card-text post-body">
+                            <%= e.description %>
+                        </div>
+                    </div>
+                </div>
+            <% end %>
+</div>
+        
+</div>
 
 
-<p class="h2 text-primary font-weight-bold ">Past Events</p>
+<h1 class="text-Uppercase text-secondary ml-5 mb-n3">Attended Events</h1>
