--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -46,4 +46,18 @@
     font-size: 16px;
     line-height: 1.5;
     text-align: justify;
-  }
+}
+
+.date {
+    span {
+      font-size: 20px;
+      
+      i {
+        color: rgb(5, 115, 0);
+      }
+    }
+
+    p {
+        font-size: 16px;
+    }
+}
