--- a/app/views/events/_past-events.html.erb
+++ b/app/views/events/_past-events.html.erb
@@ -1,11 +1,12 @@
 <div class="grid-post">
     <% @past_events.each do |e| %>
-        <div class="card box">
-            <img src="https://assets.simpleviewinc.com/simpleview/image/fetch/c_limit,q_75,w_1200/https://assets.simpleviewinc.com/simpleview/image/upload/crm/sanmateoca/shutterstock_61104537504_8ef67d97-5056-a36a-0b9f5fc892eae781.jpg" alt="img" class="card-img-top">
-            
+        <div class="card box bg-light">
             <div class="card-body">
                 <div class="card-title">
-                    <%= link_to e.title, event_path(e), class: 'h4 text-uppercase text-decoration-none post-title' %>
+                    <%= link_to e.title, event_path(e), class: 'h4 text-uppercase text-decoration-none post-title mb-0' %>
+                <small>
+                    <%= e.date %>
+                </small>
                 </div>
                 <div class="card-text post-body">
                     <%= e.description %>
