--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,29 +32,8 @@
           <%= link_to 'U-Events', root_path, class: " text-white font-weight-bold h3 text-decoration-none font-italic" %>
       </div>
       <div class="nav-right d-flex flex-row align-items-center">
-        <% if current_user %>
-          <div class="btn btn-light mr-2">
-            <%= link_to 'Create Event', new_event_path, class: "text-decoration-none" %>
-          </div>
-
-          <div class="text-white mr-2">
-            <%= link_to current_user.name, current_user, class: "text-white font-weight-bold text-decoration-none" %>
-          </div>
-
-          <div class="ml-2" >
-            <%= link_to 'Sign Out', sign_out_path, class: "text-white font-weight-bold text-decoration-none" %>
-          </div>
         
-        <% else %>
-          <div class="text-white">
-            <%= link_to 'Sign In', sign_in_path, class: "text-white" %>
-          </div>
-
-          <div class="btn btn-light ml-2" >
-              <%= link_to 'Sign Up', sign_up_path, class: "" %>
-
-          </div>
-        <% end %>
+        <%= nav_links %>
         
       </div>
     </nav>
