Add invitation to user part
- Add Withdraw, join and invite button

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,7 +7,7 @@
     <% end %>
 
 </div>
-<div class="past-events">
+<div class="past-events p-3">
 
     <h2 class="text-Uppercase text-secondary ml-5 mb-n3">Past Events </h2>
 
