--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,11 @@
 
   <body>
 
-  <div id="successMessage" class="p-0 m-0 d-flex align-items-center">
-    <% if flash[:notice] %>
-      
-        <p class="notice"><%= notice %></p>  
-    <% end %>
+    <div id="successMessage" class="p-0 m-0 d-flex align-items-center">
+      <% if flash[:notice] %>
+        
+          <p class="notice"><%= notice %></p>  
+      <% end %>
     </div>
 
     
@@ -37,6 +37,16 @@
         
       </div>
     </nav>
+
+
+    <div class="container-fluid px-0 overflow-hidden">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-10 col-lg-auto">
+        
+        </div>
+      </div>
+    </div>
+
 
     <%= yield %>
 
