--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,52 +8,57 @@
 
 <br >
 
-<div class="created-event">
-    <h1 class="text-uppercase text-primary ml-5 mb-n3">Created Events</h1>
-        <div class="grid-post">
+<div class="card box p-3 mb-3 float-right col-4 p-3 m-3">
+
+  <h1 class="text-uppercase text-primary justify-content-center d-flex  h4">Attended Events</h1>
+
+  <div aria-labelledby="nav-profile-tab">
+        <h3 class="h5 text-capitalize">Upcoming Events</h3>
+              <% @upcoming.each do |event| %>
+                <div class="d-flex flex-column">
+                  <%= link_to event.title, event_path(event), class: "text-primary font-weight-bold h4 text-decoration-none"  %>
+                  <span class="text-uppercase text-danger mt-n2"><%= event.date %></span>
+                </div>                    
+              <% end %>
+              <hr>
+  </div>
+
+   <div aria-labelledby="nav-profile-tab border-top">
+        <h3 class="h5 text-capitalize">past Events</h3>
+              <% @past.each do |event| %>
+               
+                      <span class="text-uppercase text-danger"><%= event.date %></span>
+    
+                        <%= link_to event.title, event_path(event), class: "text-dark" %>
+              <% end %>
+  </div>
+
+
+</div>
+
+
+<div class="created-event clearfix float-left col-7 p-3 m-3 bg-light">
+    <h1 class="text-uppercase text-primary ml-5 mb-n3 h3 font-weight-bold">Created Events</h1>
+        
         <% if @created_event.any? %>
             <% @created_event.each do |e| %>
-                <div class="card box"> 
-                    <div class="card-body">
-                        <div class="card-title">
-                            <%= link_to e.title, event_path(e), class: 'h4 text-uppercase text-decoration-none post-title' %>
-                        </div>
-                        <div class="card-text post-body">
-                            <%= e.description %>
-                        </div>
-                    </div>
-                </div>
+              <div class="grid-post">
+                  <div class="card box"> 
+                      <div class="card-body">
+                          <div class="card-title">
+                              <%= link_to e.title, event_path(e), class: 'h4 text-uppercase text-decoration-none post-title' %>
+                          </div>
+                          <div class="card-text post-body">
+                              <%= e.description %>
+                          </div>
+                      </div>
+                  </div>
+              </div>
             <% end %>
         <% else %>
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column p-3 m-3">
                 <p>User has Not Created any Events</p>
-                <%= link_to "Create Event", new_event_path, class: "btn btn-primary w-50"  %>
+                <%= link_to "Create Event", new_event_path, class: "btn btn-primary w-25"  %>
             </div>
         <% end %>
 </div>
-        
-</div>
-
-
-<h1 class="text-uppercase text-primary ml-5 mb-n3">Attended Events</h1>
-
-<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-            <% @upcoming.each do |event| %>
-              <div class="row mt-4 event p-4">
-                <div class="col-md-4">
-                  <img class="img-fluid" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F116837057%2F321310090885%2F1%2Foriginal.20201105-075340?h=230&w=460&auto=format%2Ccompress&q=75&sharp=10&rect=0%2C0%2C2160%2C1080&s=50a847fbce8bbdfabb88e2e9c1b7c3fa" alt="">
-                </div>
-                <div class="col-md-8">
-                  <div class="date">
-                    <span class="text-uppercase text-danger"><%= event.date %></span>
-                  </div>
-                  <div class="event-title">
-                    <h3 class="font-weight-bold">
-                      <%= link_to event.title, event_path(event), class: "text-dark" %>
-                    </h3>
-                  </div>
-                </div>
-              </div>
-            <% end %>
-
-          </div>
