--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="main-invite container-fluid p-3 d-flex justify-content-center">
+<div class="main-invite container-fluid p-3 d-flex justify-content-center w-50">
     <h2>Invite User for the <span class="text-primary"><%= @event.title %> </span> Event!!</h2>
 </div>
 <div class=" user-invitation p-3 align-item-center bg-light w-50">
