--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,13 +8,7 @@
                 <%= user.name %></td>
             </div>
             <div>
-                <% if invited?(user, @event.id) && attended?(user, @event.id) %>
-                    <p class="font-weight-bold text-success py-1 px-4">Invitation accepted</p>
-                <% elsif invited?(user, @event.id) && attended?(user, @event.id) != true %>
-                    <%= link_to "Cancel invitation", cancel_path(user_id: user.id, event_id: @event.id), class: " py-1 px-4 text-center rounded nav-link border border-danger text-danger" %>
-                <% else %>
-                    <%= link_to "Invite", invite_path(user_id: user.id, event_id: @event.id), class: "btn btn-primary text-center rounded nav-link py-1 px-4" %>
-                <% end %>
+                <%= invitation(user) %>
             </div>
         </div>
     <% end %>
